--- a/.luarc.json
+++ b/.luarc.json
@@ -5,5 +5,6 @@
     "param-type-mismatch",
     "missing-parameter"
   ],
+  "Lua.workspace.checkThirdParty": false,
   "diagnostics.libraryFiles": "Disable"
 }
